--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 E - 36416118.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 E - 36416118.md
@@ -2,8 +2,9 @@
 
 I.-La demande d'agrément relatif à l'activité d'opérateur de détaxe mentionnée à l'article 262-0 bis du code général des
 impôts est déposée, par voie électronique ou, en cas de recours à la voie postale, par lettre recommandée avec demande d'avis
-de réception, auprès de la direction générale des douanes et droits indirects. Elle est établie au moyen d'un formulaire dont
-le modèle est fixé par arrêté du ministre chargé des douanes.
+de réception, auprès du directeur interrégional des douanes et droits indirects territorialement compétent ou, en Guadeloupe,
+en Guyane, à La Réunion et à Mayotte, auprès du directeur régional des douanes et droits indirects. Elle est établie au moyen
+d'un formulaire dont le modèle est fixé par arrêté du ministre chargé des douanes.
 
 II.-La demande d'agrément est accompagnée des pièces suivantes :
 
@@ -20,8 +21,14 @@ la plate-forme d'échange de données informatisées mentionnée au I de l'artic
 qui concerne, notamment, les standards de communication et de modélisation des messages, les conditions de connexion au
 système informatique de l'administration des douanes et le fonctionnement technique du traitement.
 
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
+
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
