--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 L - 36416187.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 L - 36416187.md
@@ -164,16 +164,23 @@ trimestriels issus du système informatique douanier dédié à la détaxe.
 Les manquements prévus au 2 du présent article sont constatés à l'occasion de leurs contrôles par les agents des douanes ou
 lors d'audits de suivi.
 
-Les amendes sont prononcées par le ministre chargé des douanes. Elles ne peuvent être prononcées avant l'expiration d'un
-délai de trente jours à compter de la notification du document par lequel l'administration a fait connaître à l'opérateur
-concerné la sanction qu'elle se propose d'appliquer, les motifs de celle-ci et la possibilité dont dispose l'intéressé de
-présenter dans ce délai ses observations. Elles sont recouvrées selon les règles, privilèges et garanties applicables en
-matière douanière.
+Les amendes sont prononcées par le directeur interrégional des douanes et droits indirects territorialement compétent ou, en
+Guadeloupe, en Guyane, à La Réunion et à Mayotte, par le directeur régional des douanes et droits indirects. Elles ne peuvent
+être prononcées avant l'expiration d'un délai de trente jours à compter de la notification du document par lequel
+l'administration a fait connaître à l'opérateur concerné la sanction qu'elle se propose d'appliquer, les motifs de celle-ci
+et la possibilité dont dispose l'intéressé de présenter dans ce délai ses observations. Elles sont recouvrées selon les
+règles, privilèges et garanties applicables en matière douanière.
 
 Dans les deux cas, l'accès au dossier concernant l'intéressé a lieu à la demande écrite de ses représentants légaux.
 
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
+
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
