--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 M - 36416193.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 M - 36416193.md
@@ -1,14 +1,16 @@
 # Article 202 M
 
 Lorsque l'opérateur de détaxe ne remplit plus l'une ou plusieurs des conditions auxquelles a été soumise la délivrance de
-l'agrément ou qu'il apparaît qu'il n'est plus en mesure de se conformer aux obligations qui lui incombent, l'administration
-des douanes l'informe de son intention de suspendre l'agrément et des motifs qui justifient cette suspension.
+l'agrément ou qu'il apparaît qu'il n'est plus en mesure de se conformer aux obligations qui lui incombent, le directeur
+interrégional ou le directeur régional des douanes et droits indirects ayant délivré l'agrément, mentionné à l'article 202 G,
+l'informe de son intention de suspendre l'agrément et des motifs qui justifient cette suspension.
 
 Le titulaire dispose d'un délai de trente jours à compter de la communication des motifs de la suspension envisagée pour se
 mettre en conformité avec les obligations en cause ou pour faire valoir ses observations, écrites ou orales.
 
-Si, à l'issue de ce délai de trente jours, les conditions du maintien de l'agrément ne sont pas réunies, l'administration des
-douanes suspend l'agrément. La période de suspension prononcée par l'administration ne peut excéder une année.
+Si, à l'issue de ce délai de trente jours, les conditions du maintien de l'agrément ne sont pas réunies, le directeur
+interrégional ou le directeur régional des douanes et droits indirects ayant délivré l'agrément, mentionné à l'article 202 G,
+suspend l'agrément. La période de suspension prononcée par l'administration ne peut excéder une année.
 
 En cas de suspension, le titulaire de l'agrément a interdiction d'émettre des bordereaux de vente à l'exportation. Il reste
 néanmoins tenu aux obligations qui lui incombent au titre des bordereaux émis précédemment.
@@ -17,17 +19,23 @@ Dès réception de la décision de suspension, l'opérateur de détaxe prévient
 état afin que ces derniers ne produisent plus, par son intermédiaire, de bordereaux de vente à l'exportation, quelle que soit
 leur forme.
 
-Lorsqu'elle est saisie par l'opérateur de détaxe qui estime être à nouveau en conformité, l'administration procède à un audit
-de suivi pour vérifier le respect par l'opérateur des critères requis pour l'exercice de son activité, et, si tel est le cas,
-pour lever la suspension. La durée de validité de l'agrément intègre les périodes durant lesquelles l'agrément de l'opérateur
-a été suspendu
+Lorsque l'administration est saisie par l'opérateur de détaxe qui estime être à nouveau en conformité, la décision de lever
+la suspension de l'agrément est prise par le directeur interrégional ou le directeur régional, mentionné au I, après qu'un
+audit de suivi a pu établir le respect, par l'opérateur, des critères requis pour l'exercice de son activité. La durée de
+validité de l'agrément intègre les périodes durant lesquelles l'agrément de l'opérateur a été suspendu
+
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
 
 _Cité par_:
 
   - Arrêté du 13 janvier 2018 - art. (V)
+
+_Modifié par_:
+
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
