--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 N - 36416196.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 N - 36416196.md
@@ -1,7 +1,8 @@
 # Article 202 N
 
-L'agrément peut être retiré par décision du ministre chargé des douanes si l'opérateur de détaxe ne s'est pas mis en
-conformité avec ses obligations durant le délai de suspension de son agrément.
+L'agrément peut être retiré par décision du directeur interrégional ou le directeur régional des douanes et droits indirects,
+mentionné à l'article 202 G, si l'opérateur de détaxe ne s'est pas mis en conformité avec ses obligations durant le délai de
+suspension de son agrément.
 
 L'agrément ne peut être retiré qu'après que son titulaire a été informé des raisons qui motivent ce retrait. Ce dernier
 bénéficie d'un délai de trente jours, à compter de la communication de ces motifs, pour faire valoir ses observations écrites
@@ -17,12 +18,18 @@ forme.
 En cas de retrait, le demandeur ne peut présenter de nouvelle demande d'agrément dans un délai d'un an à compter de la
 notification de ce retrait.
 
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
+
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
 
 _Cité par_:
 
   - Arrêté du 13 janvier 2018 - art. (V)
+
+_Modifié par_:
+
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
