--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
@@ -166,17 +166,33 @@ de l'annexe II au même code ;
 
 63° Autorisation de refonte d'ouvrages aux titres légaux destinés à une commercialisation en dehors du territoire français
 sans apposition des poinçons réglementaires, en application de l'article 543 du code général des impôts et de l'article 208
-de l'annexe I au même code.
+de l'annexe I au même code ;
+
+64° Agrément des commissionnaires en garantie prévu à l'article 535 du code général des impôts ainsi qu'au premier alinéa de
+l'article 56 J septies et aux premier et troisième alinéas de l'article 56 J octies de l'annexe IV à ce code ;
+
+65° Délivrance, suspension et retrait de l'agrément des organismes chargés de l'élaboration, de la vente et du transfert des
+fichiers informatiques supportant la version dématérialisée des poinçons de garantie prévus aux articles 275 bis F et 275 ter
+G de la présente annexe et aux articles 56 J terdecies A à 56 J terdecies E de l'annexe IV ;
+
+66° Délivrance, suspension et retrait de l'agrément des organismes de contrôle chargés d'attester la garantie du titre des
+ouvrages en métaux précieux prévus à l'article 535 II du code général des impôts et aux articles 275 ter à 275 ter P de la
+présente annexe ;
+
+67° Délivrance du numéro d'agrément des personnes responsables de l'embouteillage du produit prévue à l'article 111 I de
+l'annexe III au code général des impôts et au a de l'article 50-0 C de l'annexe IV.
 
 **Nota:**
 
-Modification effectuée en conséquence du décret n° 2017-1284 du 9 août 2017 (art. 1er).
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2018-500 du 20 juin 2018 - art. 3
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
 
 _Cite_:
 
