--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 F - 36416120.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 F - 36416120.md
@@ -1,22 +1,31 @@
 # Article 202 F
 
-L'administration des douanes dispose d'un délai de trente jours à compter de la date de l'accusé de réception, électronique
-ou postal, de la demande d'agrément pour se prononcer sur la recevabilité de la demande au regard des pièces fournies ainsi
-que du bulletin n° 2 du casier judiciaire de l'opérateur, dont elle demande communication au service compétent.
+Le directeur interrégional ou le directeur régional des douanes et droits indirects territorialement compétent, mentionné à
+l'article 202 E, dispose d'un délai de trente jours à compter de la date de l'accusé de réception, électronique ou postal, de
+la demande d'agrément pour se prononcer sur la recevabilité de la demande au regard des pièces fournies ainsi que du bulletin
+n° 2 du casier judiciaire de l'opérateur, dont il demande communication au service compétent.
 
-Dans le cas où la demande d'agrément est incomplète, le délai d'obtention fixé par l'administration pour la réception des
-pièces et informations supplémentaires proroge d'autant la période de recevabilité.
+Dans le cas où la demande d'agrément est incomplète, le délai d'obtention fixé par le directeur interrégional ou régional
+territorialement compétent pour la réception des pièces et informations supplémentaires proroge d'autant la période de
+recevabilité.
 
-Si, à l'issue du délai prévu au premier alinéa, l'administration a notifié à l'opérateur qu'elle considère sa demande
-irrecevable, le demandeur bénéficie d'un délai de trente jours à compter de cette notification pour faire valoir ses
-observations écrites ou orales. L'administration se prononce ensuite définitivement sur la recevabilité de la demande.
+Si, à l'issue du délai prévu au premier alinéa, le directeur interrégional ou le directeur régional territorialement
+compétent a notifié à l'opérateur qu'il considère sa demande irrecevable, le demandeur bénéficie d'un délai de trente jours à
+compter de cette notification pour faire valoir ses observations écrites ou orales. Le directeur interrégional ou le
+directeur régional territorialement compétent se prononce ensuite définitivement sur la recevabilité de la demande.
+
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
 
 _Cité par_:
 
   - Arrêté du 13 janvier 2018 - art. (V)
+
+_Modifié par_:
+
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
