--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 G - 36416155.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 G - 36416155.md
@@ -1,35 +1,40 @@
 # Article 202 G
 
-I.-Lorsque la demande est recevable, les services informatiques de la direction générale des douanes et droits indirects
+I.- Lorsque la demande est recevable, les services informatiques de la direction générale des douanes et droits indirects
 mettent à disposition du demandeur un environnement de certification et une équipe l'accompagne dans le cadre de l'obtention
-de la certification de sa plate-forme informatique. La certification est délivrée par la direction générale des douanes et
-droits indirects.
+de la certification de sa plate-forme informatique. La certification est délivrée par le directeur interrégional ou le
+directeur régional des douanes et droits indirects territorialement compétent, mentionné à l'article 202 E.
 
-II.-L'administration des douanes informe l'intéressé de la programmation d'un audit afin de vérifier que les conditions
-d'obtention de l'agrément sont satisfaites et de s'assurer de la capacité de l'opérateur à respecter les obligations que lui
-impose la réglementation au titre de l'activité de détaxe.
+II.- Le directeur interrégional ou le directeur régional des douanes et droits indirects territorialement compétent,
+mentionné au I, informe l'intéressé de la programmation d'un audit afin de vérifier que les conditions d'obtention de
+l'agrément sont satisfaites et de s'assurer de la capacité de l'opérateur à respecter les obligations que lui impose la
+réglementation au titre de l'activité de détaxe.
 
 L'audit est réalisé, dans les conditions prévues à l'article L. 80 I du livre des procédures fiscales, sur la base de
 critères contenus au sein de grilles d'audit publiées par arrêté du ministre chargé des douanes. Chaque grille détaille
 l'ensemble des spécifications nécessaires au bon fonctionnement de l'activité d'opérateur de détaxe.
 
-III.-La décision d'agrément est prise par le ministre chargé des douanes. Elle est rendue sur la base des résultats de
-l'audit mené par les services de l'administration des douanes.
+III.-La décision d'agrément est prise par le directeur interrégional ou le directeur régional des douanes et droit indirects
+territorialement compétent, mentionné au I. Elle est rendue sur la base des résultats de l'audit mené par les services de
+l'administration des douanes.
 
 La décision d'agrément est prise dans un délai de cent vingt jours à compter de la délivrance de la certification
 informatique. Elle est accompagnée du rapport d'audit.
 
-Ce délai peut être prorogé de soixante jours par décision expresse de l'administration des douanes, en cas d'impossibilité
-pour elle d'effectuer l'audit prévu à l'article 202 F dans le délai précité.
+Ce délai peut être prorogé de soixante jours par décision expresse du directeur interrégional ou du directeur régional des
+douanes et droits indirects territorialement compétent, mentionné au I, en cas d'impossibilité pour lui d'effectuer l'audit
+prévu à l'article 202 F dans le délai précité.
 
-Sous réserve des dispositions du troisième alinéa du présent III, le défaut de réponse de l'administration dans le délai
-prévu aux deuxième et troisième alinéas vaut acceptation.
+Sous réserve des dispositions du troisième alinéa du présent III, le défaut de réponse de l'autorité compétente pour délivrer
+l'agrément dans le délai prévu aux deuxième et troisième alinéas vaut acceptation.
+
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
 
 _Cité par_:
 
@@ -37,3 +42,7 @@ _Cité par_:
   - Arrêté du 13 janvier 2018 - art. (V)
   - Arrêté du 13 janvier 2018 - art. 1
   - Code général des impôts, annexe 4, CGIAN4. - art. 50 sexies L (V)
+
+_Modifié par_:
+
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
