--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 O - 36416199.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 202 O - 36416199.md
@@ -1,16 +1,23 @@
 # Article 202 O
 
-Si l'opérateur de détaxe souhaite cesser son activité, il en informe le ministre chargé des douanes, au plus tard trois mois
-avant la date de fin de l'activité.
+Si l'opérateur de détaxe souhaite cesser son activité, il en informe le directeur interrégional ou le directeur régional des
+douanes et droits indirects ayant délivré l'agrément, mentionné à l'article 202 G, au plus tard trois mois avant la date de
+fin de l'activité.
 
-L'administration des douanes accuse réception de la demande et enregistre une date de fin de validité de l'agrément détenu
-par l'opérateur de détaxe, correspondant à la date de fin d'activité déclarée par ce dernier.
+Ce dernier accuse réception de la demande et enregistre une date de fin de validité de l'agrément détenu par l'opérateur de
+détaxe, correspondant à la date de fin d'activité déclarée par ce dernier.
 
 L'opérateur de détaxe reste tenu à ses obligations pendant une durée de sept mois à compter de la date d'émission de chacun
 des bordereaux de vente à l'exportation précédemment émis.
 
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
+
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2017-1825 du 28 décembre 2017 - art. 1
+  - Décret n°2020-68 du 30 janvier 2020 - art. 16
