--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 F - 6293779.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 F - 6293779.md
@@ -2,14 +2,18 @@
 
 Les contribuables qui réalisent des opérations imposables en application de l'article 150-0 A du code général des impôts sont
 tenus de souscrire, dans le délai prévu à l'article 175 du même code, une déclaration spéciale des plus-values sur une
-formule délivrée par l'administration indiquant : 
+formule délivrée par l'administration indiquant :
 
-a) Abrogé ; 
+a) Abrogé ;
 
-b) Le montant du gain net ou de la distribution imposable assorti des éléments nécessaires à sa détermination ; 
+b) Le montant du gain net ou de la distribution imposable assorti des éléments nécessaires à sa détermination ;
 
-c. Le montant des abattements prévus au 1 de l'article 150-0 D et à l'article 150-0 D ter du code général des impôts ainsi
-que les éléments nécessaires à leur détermination. 
+b bis) Le montant de la soulte éventuellement perçue lors de l'opération d'échange ou d'apport réalisée dans les conditions
+prévues à l'article 150-0 B du code général des impôts, ainsi que le montant de la soulte imposable au titre de cette
+opération ;
+
+c) Le cas échéant, le montant des abattements prévus au 1 de l'article 150-0 D et à l'article 150-0 D ter du code général des
+impôts ainsi que les éléments nécessaires à leur détermination.
 
 Toutefois, les contribuables peuvent se libérer de cette obligation en fournissant, pour les titres en dépôt ou inscrits en
 compte auprès d'un intermédiaire habilité, un document établi par ce dernier et faisant apparaître les mêmes éléments. La
@@ -22,7 +26,7 @@ D ter du code précité.
 
 _Modifié par_:
 
-  - Décret n°2015-608 du 3 juin 2015 - art. 2
+  - Décret n°2020-122 du 13 février 2020 - art. 1
 
 _Cité par_:
 
@@ -32,7 +36,7 @@ _Cité par_:
   - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 K (Ab)
   - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 L bis (Ab)
   - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 M (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 91 quater J (M)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 91 quater J (V)
   - Code général des impôts, annexe 3, CGIAN3. - art. 41 duovicies G bis (P)
   - Code général des impôts, annexe 3, CGIAN3. - art. 41 quatervicies (V)
   - Code général des impôts, annexe 3, CGIAN3. - art. 41 quinvicies (V)
@@ -40,7 +44,7 @@ _Cité par_:
 _Cite_:
 
   - Code général des impôts, CGI. - art. 150-0 A
-  - Code général des impôts, CGI. - art. 150-0 D (V)
-  - Code général des impôts, CGI. - art. 150-0 D ter (V)
+  - Code général des impôts, CGI. - art. 150-0 D
+  - Code général des impôts, CGI. - art. 150-0 D ter
   - Code général des impôts, CGI. - art. 175
-  - Code général des impôts, CGI. - art. 199 terdecies-0 A (V)
+  - Code général des impôts, CGI. - art. 199 terdecies-0 A
