--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 N - 6293795.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 74-0 N - 6293795.md
@@ -1,21 +1,22 @@
 # Article 74-0 N
 
 1. L'état prévu au 2 de l'article 74-0 M, établi sur une formule délivrée par l'administration, fait apparaître, pour chaque
-plus-value dont le report n'est pas expiré : 
+plus-value dont le report n'est pas expiré :
 
-a) La nature et la date de l'opération ainsi que le régime d'imposition applicable ; 
+a) La nature et la date de l'opération ainsi que le régime d'imposition applicable ;
 
-b) La désignation des sociétés concernées ; 
+b) La désignation des sociétés concernées ;
 
-c) Le montant de ces plus-values au 31 décembre de l'année d'imposition et au 31 décembre de l'année précédente ; 
+c) Le montant de ces plus-values au 31 décembre de l'année d'imposition et au 31 décembre de l'année précédente ;
 
-d) La nature et la date de l'événement ayant entraîné la modification de ce montant ; 
+d) La nature et la date de l'événement ayant entraîné la modification de ce montant ;
 
 e) Le cas échéant, la désignation de la société ou du groupement interposé qui a réalisé l'opération d'échange de titres
-ainsi que la quote-part des droits détenus dans la société ou le groupement à la date de l'échange. 
+ainsi que la quote-part des droits détenus dans la société ou le groupement à la date de l'échange.
 
 2. Pour l'application du 2° du I de l'article 150-0 B ter du code général des impôts, les contribuables joignent, le cas
-échéant, à la formule prévue au 1 une copie des attestations mentionnées à l'article 74-0 L.
+échéant, à la formule prévue au 1 une copie des attestations mentionnées à l'article 41 quatervicies A de l'annexe III à ce
+même code.
 
 **Liens relatifs à cet article**
 
@@ -25,14 +26,14 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2016-177 du 22 février 2016 - art. 1
+  - Décret n°2020-122 du 13 février 2020 - art. 1
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 L (Ab)
-  - Code général des impôts, CGI. - art. 150-0 B ter (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 L
+  - Code général des impôts, CGI. - art. 150-0 B ter
 
 _Cité par_:
 
   - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 M (V)
-  - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 O (V)
+  - Code général des impôts, annexe 2, CGIAN2. - art. 74-0 O (M)
