--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 284 - 6294703.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 284 - 6294703.md
@@ -1,18 +1,28 @@
 # Article 284
 
-L'administration établit, chaque année, un calendrier comportant six campagnes d'homologation des prix de vente au détail des
-tabacs manufacturés, selon des intervalles qui ne peuvent dépasser trois mois.
+L'administration établit, chaque année, un calendrier comportant au moins six campagnes d'homologation des prix de vente au
+détail des tabacs manufacturés, selon des intervalles qui ne peuvent dépasser trois mois.
 
 A la demande de l'administration, les fabricants de tabacs manufacturés lui communiquent, par voie dématérialisée, soit
-directement, soit par l'intermédiaire des fournisseurs agréés, les prix de vente au détail des tabacs manufacturés, pour
-chacun de leurs produits, par marque et dénomination commerciale.
+directement, soit par l'intermédiaire des fournisseurs agréés, les prix de vente au détail des tabacs manufacturés, dans les
+conditions définies à l'article 572 du code général des impôts, pour chacun de leurs produits, par marque et dénomination
+commerciale. Ils disposent d'un délai de cinq jours ouvrés à compter de la demande de l'administration pour effectuer cette
+transmission. Ils ne peuvent déposer aucune demande supplémentaire ou de correction à l'issue de ce délai.
 
 Les prix sont homologués par arrêté conjoint du ministre chargé du budget et du ministre chargé de la santé, dans un délai
-maximal de trois mois à compter du premier jour d'ouverture de l'application informatique dédiée aux dépôts des demandes
+maximal de trois mois à compter de l'ouverture, par la demande mentionnée à l'alinéa précédent, de la campagne
 d'homologation. Ils sont publiés au Journal officiel de la République française.
+
+Si un fabricant ou un fournisseur ne dépose pas de prix pendant une campagne, l'administration réexamine la liste de prix de
+la dernière campagne pour laquelle il a déposé des prix. Si ces prix respectent toujours les conditions mentionnées à
+l'article 572 précité, l'administration les homologue selon les modalités mentionnées à l'alinéa précédent.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2018-292 du 20 avril 2018 - art. 1
+  - Décret n°2020-707 du 9 juin 2020 - art. 1
+
+_Cite_:
+
+  - Code général des impôts, CGI. - art. 572
