--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 039 - 6293723.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 039 - 6293723.md
@@ -1,10 +1,18 @@
 # Article 39
 
 Pour bénéficier de l'exonération prévue au 19° de l'article 81 du code général des impôts, le salarié doit inscrire son nom
-sur les titres-restaurant si cette mention n'a pas été apposée par l'employeur ou par le comité d'entreprise.
+sur les titres-restaurant si cette mention n'a pas été apposée par l'employeur ou par le comité social et économique.
+
+**Nota:**
+
+Modification effectuée en conséquence des articles 1er-I et 9-II de l'ordonnance n° 2017-1386 du 22 septembre 2017.
 
 **Liens relatifs à cet article**
 
+_Modifié par_:
+
+  - Décret n°2020-897 du 22 juillet 2020 - art.
+
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 81 (V)
+  - Code général des impôts, CGI. - art. 81
