--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 143 - 6294139.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 143 - 6294139.md
@@ -5,26 +5,26 @@ effectuée par année.
 
 Pour cette régularisation, le montant des droits exigibles au titre de la majoration de la taxe sur les salaires est
 déterminé en appliquant le taux de 4,25 % à la fraction de la rémunération effectivement allouée à chaque salarié au cours de
-l'année civile, qui est comprise entre 7 924 € et 15 822 € et le taux de 9,35 % à la fraction excédant 15 572 € et en
+l'année civile, qui est comprise entre 8 004 € et 15 981 € et le taux de 9,35 % à la fraction excédant 15 981 € et en
 multipliant le chiffre ainsi déterminé par le rapport qui existe entre le montant de la rémunération qui a été payée pendant
 la période d'application de la majoration et le montant total de la rémunération annuelle.
 
 Les droits dus ne peuvent toutefois excéder le chiffre obtenu en appliquant au montant de la rémunération dont chaque salarié
 a bénéficié au cours de la période d'application de la majoration les taux de :
 
-4,25 % à la fraction de cette rémunération qui, ajustée à l'année, est comprise entre 7 924 € et 15 822 € ;
+4,25 % à la fraction de cette rémunération qui, ajustée à l'année, est comprise entre 8 004 € et 15 981 € ;
 
-9,35 % à la fraction de cette rémunération qui, ajustée à l'année, dépasse 15 822 €.
+9,35 % à la fraction de cette rémunération qui, ajustée à l'année, dépasse 15 981 €.
 
 **Nota:**
 
-Modifications effectuées en conséquence de l’article 2-I-2° a de la loi n° 2018-1317 du 28 décembre 2018.
+Modifications effectuées en conséquence de l’article 2-I-2° a de la loi n° 2019-1479 du 28 décembre 2019.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2019-559 du 6 juin 2019 - art. 2
+  - Décret n°2020-897 du 22 juillet 2020 - art.
 
 _Cité par_:
 
@@ -33,4 +33,4 @@ _Cité par_:
 _Cite_:
 
   - Code général des impôts, annexe 2, CGIAN2. - art. 383
-  - Code général des impôts, CGI. - art. 231 (M)
+  - Code général des impôts, CGI. - art. 231
