--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 171 BK - 30224483.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 171 BK - 30224483.md
@@ -17,7 +17,7 @@ c) Son numéro d'identité tel que défini au premier alinéa de l'article R. 12
 2. Pour chaque opération ouvrant droit à l'un des avantages fiscaux mentionnés au premier alinéa de l'article 242 septies
 précité :
 
-a) Les éléments mentionnés au neuvième alinéa du même article ;
+a) Les éléments mentionnés au dixième alinéa du même article ;
 
 b) La référence à l'article du code général des impôts sur le fondement duquel l'opération est réalisée ;
 
@@ -45,15 +45,15 @@ IV. – La charte de déontologie mentionnée au huitième alinéa de l'article 
 
 **Nota:**
 
-Voir l'annexe au décret n° 2015-149 du 10 février 2015.
+Modification effectuée en conséquence de l’article 131-I-4° c et III B 1 et 2 de la loi n° 2018-1317 du 28 décembre 2018.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2015-149 du 10 février 2015 - art. 1
+  - Décret n°2020-897 du 22 juillet 2020 - art.
 
 _Cite_:
 
-  - Code de commerce - art. R123-221 (V)
-  - Code général des impôts, CGI. - art. 242 septies (V)
+  - Code de commerce - art. R123-221
+  - Code général des impôts, CGI. - art. 242 septies
