--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 289 - 6294741.md
@@ -188,11 +188,11 @@ Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dis
 Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
 applicables à la date de leur présentation.
 
+Le 31° devient sans objet.
+
+Modification effectuée en conséquence de l'article 1er de l'arrêté du 12 juin 2018.
+
 **Liens relatifs à cet article**
-
-_Modifié par_:
-
-  - Décret n°2020-68 du 30 janvier 2020 - art. 16
 
 _Cite_:
 
