--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 294 bis - 6294764.md
@@ -21,8 +21,8 @@ a) L'engagement de conservation souscrit par le défunt ou le donateur, pour lui
 avec un ou plusieurs autres associés, d'une durée minimale de deux ans, est en cours au jour de la transmission à titre
 gratuit ;
 
-b) Cet engagement a été respecté pour le pourcentage et le nombre de titres prévus au b du 1° lors de sa souscription
-jusqu'au jour de la transmission à titre gratuit ; En cas d'interposition d'une ou plusieurs sociétés entre un associé partie
+b) Cet engagement a été respecté pour le pourcentage et le nombre de titres prévus au a du 1° lors de sa souscription
+jusqu'au jour de la transmission à titre gratuit. En cas d'interposition d'une ou plusieurs sociétés entre un associé partie
 à l'engagement autre que le bénéficiaire mentionné au premier alinéa du présent I et la société dont les parts ou actions
 font l'objet de cet engagement, cette dernière fournit les attestations mentionnées au 1° du IV du présent article,
 transmises par la ou les sociétés interposées ;
@@ -112,11 +112,15 @@ fournit la ou les attestations mentionnées au 1° du présent IV transmises par
 b) Le cas échéant, la limitation, par ses statuts, des droits de l'usufruitier dans les conditions prévues par l'avant-
 dernier alinéa de l'article 787 B précité en cas de donation de titres consentie avec réserve d'usufruit.
 
+**Nota:**
+
+Modification effectuée en conséquence de l’article 1er du décret n° 2019-653 du 27 juin 2019.
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2019-653 du 27 juin 2019 - art. 1
+  - Décret n°2020-897 du 22 juillet 2020 - art.
 
 _Cité par_:
 
