--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 306-0 F bis - 29426844.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 306-0 F bis - 29426844.md
@@ -3,7 +3,7 @@
 I. – Le patrimoine immobilier des sociétés mentionnées au d et au e du 1 du I bis de l'article 990 I du code général des
 impôts et l'actif des organismes de placement collectif mentionnés au même e sont composés d'immeubles bâtis respectant les
 conditions mentionnées aux a à c de l'article 279-0 bis A du code précité ou d'immeubles bâtis financés dans les conditions
-mentionnées aux articles R. 331-17 à R. 331-21 du code de la construction et de l'habitation ou de droits réels portant sur
+mentionnées aux articles D. 331-17 à D. 331-21 du code de la construction et de l'habitation ou de droits réels portant sur
 ces derniers immeubles. 
 
 II. – Le nombre de salariés, le chiffre d'affaires et le total de bilan de la société émettrice des titres mentionnés au b du
@@ -50,15 +50,19 @@ de personnalité morale, leur gérant ou représentant à l'égard des tiers, ti
 fiscale tout document justifiant de la valeur retenue pour la détermination de la proportion d'investissement prévue au
 neuvième alinéa du 2 du I bis de l'article 990 I du code général des impôts dans les conditions prévues au présent article.
 
+**Nota:**
+
+Modification effectuée en conséquence de l’article 5-II-3° du décret n° 2019-873 du 21 août 2019.
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2016-918 du 4 juillet 2016 - art. 1
+  - Décret n°2020-897 du 22 juillet 2020 - art.
 
 _Cite_:
 
-  - Code général des impôts, CGI. - art. 279-0 bis A (V)
-  - Code général des impôts, CGI. - art. 990 I (V)
-  - Code du travail - art. L3332-17-1 (VT)
-  - Code de la construction et de l'habitation. - art. R331-17 (V)
+  - Code général des impôts, CGI. - art. 279-0 bis A
+  - Code général des impôts, CGI. - art. 990 I
+  - Code du travail - art. L3332-17-1
+  - Code de la construction et de l'habitation. - art. D331-17
