--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter I - 37124964.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter I - 37124964.md
@@ -1,7 +1,7 @@
 # Article 371 ter I
 
-I-Les membres de la commission départementale des valeurs locatives des locaux professionnels mentionnée à l'article 1650 B
-du code général des impôts, autres que les parlementaires, sont désignés dans les conditions définies aux II à V.
+I-Les membres de la commission départementale des valeurs locatives mentionnée à l'article 1650 B du code général des impôts,
+autres que les parlementaires, sont désignés dans les conditions définies aux II à V.
 
 II.-Les membres du conseil de Paris sont désignés par celui-ci dans les deux mois qui suivent son renouvellement. La durée de
 leur mandat est la même que celle du mandat des conseillers de Paris.
@@ -48,8 +48,12 @@ d) Une personne désignée après consultation des organisations représentative
 V.-Les représentants de l'administration fiscale sont désignés par le directeur départemental ou, le cas échéant, régional
 des finances publiques.
 
+**Nota:**
+
+Modification effectuée en conséquence de l’article 146-IX H de la loi n° 2019-1479 du 28 décembre 2019.
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2018-535 du 28 juin 2018 - art. 1
+  - Décret n°2020-897 du 22 juillet 2020 - art.
