--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter J - 37124966.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter J - 37124966.md
@@ -33,8 +33,9 @@ départementale des valeurs locatives des locaux professionnels alors qu'elle es
 commission départementale des impôts directs locaux choisit, dans un délai d'une semaine, la commission au sein de laquelle
 elle siège.
 
-**Liens relatifs à cet article**
+**Nota:**
 
-_Créé par_:
+Le second alinéa du III devient sans objet.
 
-  - Décret n°2018-535 du 28 juin 2018 - art. 1
+Modification effectuée en conséquence de l’article 146-IX I de la loi n° 2019-1479 du 28 décembre 2019.
+
