--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter K - 37124968.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter K - 37124968.md
@@ -1,13 +1,17 @@
 # Article 371 ter K
 
-Un arrêté préfectoral fixe la liste des membres de la commission départementale des valeurs locatives des locaux
-professionnels, autres que les parlementaires et les représentants de l'administration fiscale, dès leur désignation dans les
-conditions prévues aux articles 371 ter I et 371 ter J.
+Un arrêté préfectoral fixe la liste des membres de la commission départementale des valeurs locatives, autres que les
+parlementaires et les représentants de l'administration fiscale, dès leur désignation dans les conditions prévues aux
+articles 371 ter I et 371 ter J.
 
 Cet arrêté est publié au recueil des actes administratifs du département.
 
+**Nota:**
+
+Modification effectuée en conséquence de l’article 146-IX H de la loi n° 2019-1479 du 28 décembre 2019.
+
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2018-535 du 28 juin 2018 - art. 1
+  - Décret n°2020-897 du 22 juillet 2020 - art.
