--- a/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter S - 37125047.md
+++ b/01. Livre premier : Assiette et liquidation de l'impôt/Article 371 ter S - 37125047.md
@@ -1,8 +1,7 @@
 # Article 371 ter S
 
-I.-Les décisions prises par la commission départementale des valeurs locatives des locaux professionnels en application du 3
-du I de l'article 1504 du code général des impôts ou du II de l'article 1518 ter du même code et par la commission
-départementale des impôts directs locaux en application du II ou du III de l'article 1504 précité sont notifiées :
+I.-Les décisions prises par la commission départementale des valeurs locatives en application du 3 du I et du III de
+l'article 1504 du code général des impôts ou du II de l'article 1518 ter du même code sont notifiées :
 
 1° Au président du conseil départemental, ou, le cas échéant, en Martinique ou en Guyane, au président de l'assemblée
 délibérante de la collectivité territoriale unique, au président du conseil de la Métropole de Lyon, ainsi qu'au maire de
@@ -13,11 +12,10 @@ département.
 
 Elles sont transmises sans délai au directeur départemental ou, le cas échéant, régional des finances publiques.
 
-Les décisions prises par la commission départementale des valeurs locatives des locaux professionnels ou la commission
-départementale des impôts directs locaux en application du IV de l'article 1504 du code général des impôts sont également
-notifiées dans les conditions prévues à l'alinéa précédent.
+Les décisions prises par la commission départementale des valeurs locatives en application du IV de l'article 1504 du code
+général des impôts sont également notifiées dans les conditions prévues à l'alinéa précédent.
 
-II.-Les arrêtés pris en application du II, du III ou du IV de l'article 1504 précité sont notifiés :
+II.-Les arrêtés pris en application du III ou du IV de l'article 1504 précité sont notifiés :
 
 1° Au président du conseil départemental, ou, le cas échéant, en Martinique ou en Guyane, au président de l'assemblée
 délibérante de la collectivité territoriale unique, au président du conseil de la Métropole de Lyon, ainsi qu'au maire de
@@ -47,11 +45,15 @@ département.
 V.-Les notifications et les transmissions prévues par le présent article sont effectuées par voie électronique ou, si
 nécessaire, par lettre recommandée avec demande d'avis de réception ou par voie administrative avec récépissé.
 
+**Nota:**
+
+Modification effectuée en conséquence de l’article 146-IX C de la loi n° 2019-1479 du 28 décembre 2019.
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2018-535 du 28 juin 2018 - art. 1
+  - Décret n°2020-897 du 22 juillet 2020 - art.
 
 _Cite_:
 
